Adding TAGS on documentation
